# 4color

./: README.md  meson.build
app/: main.cc  meson.build
lib4color/: figure.cc  figure.hh  figure_view.cc  figure_view.hh  grid_map.cc  grid_map.hh  meson.build  point.hh
test/: meson.build  test.cc
